# django-health-check-monitoring

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.rst  docker-compose.yml  ruff.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: python-app.yml
config/: urls.py
config/settings/: __init__.py  base.py  development.py  production.py
django_health_check_job/: admin.py  apps.py  models.py  utils.py
django_health_check_job/management/commands/: monitor.py
django_health_check_job/migrations/: 0001_initial.py
docs/: README.md  api-reference.md  configuration.md  installation.md  quickstart.md  usage.md
examples/: README.md  docker-compose.yml  settings_development.py  settings_production.py  supervisor.conf  systemd-service.service
frontend/app/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/app/src/: App.tsx
frontend/app/src/api/: api-client.ts  health-check-data.ts  index.ts
frontend/app/src/components/: dashboard.tsx  health-check-table.tsx  navigation-bar.tsx
frontend/app/src/models/: health-check-count.ts  index.ts
monitoring/: admin.py  models.py  serializers.py  urls.py  views.py
monitoring/migrations/: 0001_initial.py
monitoring/tests/: test_views.py
requirements/: requirements.txt  requirements_dev.txt
scripts/: run.sh
