[metadata]
name = django-health-check-job
version = 0.1
description = Django health check monitoring job
long_description = file: README.rst
url = https://github.com/kaypee90/django-health-check-job
author = kaypee90
author_email = kaypee90@yahoo.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 2.2